--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
   </head>
 
   <div class="container">
+    <ul class="nav navbar-nav">
+      <li>The Big Scary Gradebook</li>
+    </ul>
+  </div>
+
+
+  <div class="container">
     <body>
       <%= yield %>
     </body>
