--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Back to Options", teacher_path(current_user.id) %>
+<%= link_to "Back to Options", current_user %>
 
 <h4>Here are all the teachers:</h4>
 
