--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,6 +1,16 @@
-<%= link_to "Back to Options", teacher_path(current_user.id) %>
+<%= link_to "Back to Options", current_user %>
 
 <h4>Here are all the grades:</h4>
+
+<% if total_pages > current_page %>
+  <%= link_to "Next Page", grades_path(page: current_page + 1) %>
+<% end %>
+<% 5.times do |i| %>
+  <%= link_to current_page + i, grades_path(page: current_page + i) %>
+<% end %>
+<% if current_page > 0  %>
+  <%= link_to "Prev Page", grades_path(page: current_page - 1)%>
+<% end %>
 
 <table class="table">
   <thead>
