--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -11,6 +11,12 @@
       <th>
         Teacher
       </th>
+      <th>
+        Comments
+      </th>
+      <th>
+
+      </th>
     </tr>
   </thead>
   <tbody>
@@ -21,6 +27,14 @@
       </td>
       <td>
         <%= Teacher.find_by(id: user.teacher_id).name %>
+      </td>
+      <td>
+        <% Comment.where(commentable_id: user.id).each do |comment| %>
+          <li><%= comment.body %> <%= link_to "Delete", comments_path(comment.commentable_type, comment.commentable_id), method: :delete, class: 'btn btn-default btn-danger btn-xs' %></li>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to "Add Comment", new_comment_path(commentable_type: user.class, commentable_id: user.id), class: 'btn btn-default btn-info btn-xs' %>
       </td>
     </tr>
     <% end %>
